Implement JWT and unit tests
